[package]
name = "iop-morpheus-sdk"
description = "Morpheus specific modules for the IOP Stack™ SDK"
version = "0.0.15"
authors = ["IOP Ventures LLC <dev@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>", "wigy <wigy_opensource_developer@yahoo.com>"]
license = "LGPL-3.0-or-later"
edition = "2018"
repository = "https://github.com/Internet-of-People/iop-rs"
homepage = "https://developer.iop.technology/"

[dependencies]
anyhow = "1.0.57"
iop-keyvault = "0.0.15"
iop-vault = "0.0.15"
parking_lot = { version = "0.12.1", features = ["serde"] }
rand = { version = "0.8.5", features = ["getrandom"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_bytes = "0.11.6"
typetag = "0.1.8"


[dev-dependencies]
chrono = { version = "0.4.19", features = ["wasmbind"] }
iop-morpheus-proto = "0.0.15"
json-digest = "0.0.15"
serde_json = { version = "1.0.81", features = ["preserve_order"] }


[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.19.0", default-features = false }
android_logger = "0.11.0"
