[package]
name = "iop-node-wasm"
version = "0.0.14"
authors = [
    "IOP Ventures LLC <dev@iop-ventures.com>",
    "Rache Bartmoss <bartmoss@tutanota.com>",
    "wigy <wigy_opensource_developer@yahoo.com>"
]
edition = "2018"
license = "LGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.cargo-udeps.ignore]
normal = ["uuid"]

[dependencies]
iop-coeus-node = "0.0.14"
iop-coeus-proto = "0.0.14"
iop-journal-proto = "0.0.14"
iop-keyvault-wasm = "0.0.14"
iop-morpheus-node = "0.0.14"
iop-morpheus-proto = "0.0.14"
iop-proto-wasm = "0.0.14"
json-digest-wasm = "0.0.14"
serde = { version="1.0.121", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["preserve_order"] }
# Force `wasm-bindgen` feature in transitive dependency `uuid` needed by `valico` in `iop-coeus-node`
uuid = { version = "0.8", features = ["v4", "wasm-bindgen"] }
wasm-bindgen = { version = "0.2.73", features = ["serde-serialize"] }
