[package]
name = "iop-node-wasm"
description = "WebAssembly bindings to the node implementation for Hydraledger"
version = "0.0.16"
authors = ["IOP Ventures LLC <dev@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>", "wigy <wigy_opensource_developer@yahoo.com>"]
edition = "2021"
license = "LGPL-3.0-or-later"
repository = "https://github.com/Internet-of-People/iop-rs"
homepage = "https://developer.iop.technology/"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.cargo-udeps.ignore]
normal = ["uuid"]

[dependencies]
iop-coeus-node = "0.0.16"
iop-coeus-proto = "0.0.16"
iop-journal-proto = "0.0.16"
iop-keyvault-wasm = "0.0.16"
iop-morpheus-node = "0.0.16"
iop-morpheus-proto = "0.0.16"
iop-proto-wasm = "0.0.16"
json-digest-wasm = "0.0.16"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }
