[package]
name = "iop-proto-wasm"
version = "0.0.13"
authors = [
    "IOP Ventures LLC <dev@iop-ventures.com>",
    "Rache Bartmoss <bartmoss@tutanota.com>",
    "wigy <wigy_opensource_developer@yahoo.com>"
]
edition = "2018"
license = "LGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.cargo-udeps.ignore]
normal = ["uuid"]

[dependencies]
anyhow = "1.0.32"
iop-coeus-proto = "0.0.13"
iop-hydra-proto = "0.0.13"
iop-journal-proto = "0.0.13"
iop-keyvault = "0.0.13"
iop-keyvault-wasm = "0.0.13"
iop-morpheus-proto = "0.0.13"
serde = { version="1.0.121", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["preserve_order"] }
serde_str = "0.1.0"
# Force "wasm-bindgen" feature in uuid dependency needed by valico in coeus-core
uuid = { version = "0.8", features = ["v4", "wasm-bindgen"] }
wasm-bindgen = { version = "0.2.73", features = ["serde-serialize"] }
