[package]
name = "iop-proto-wasm"
version = "0.0.15"
authors = ["IOP Ventures LLC <dev@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>", "wigy <wigy_opensource_developer@yahoo.com>"]
edition = "2018"
license = "LGPL-3.0-or-later"
description = "WebAssembly bindings shared between node and sdk in the IOP Stack™"
repository = "https://github.com/Internet-of-People/iop-rs"
homepage = "https://developer.iop.technology/glossary?id=json-masking"


[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.cargo-udeps.ignore]
normal = ["uuid"]

[dependencies]
anyhow = "1.0.57"
iop-coeus-proto = "0.0.15"
iop-hydra-proto = "0.0.15"
iop-journal-proto = "0.0.15"
iop-keyvault = "0.0.15"
iop-keyvault-wasm = "0.0.15"
iop-morpheus-proto = "0.0.15"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
serde_str = "0.1.0"
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }
