[package]
name = "iop-sdk-wasm"
version = "0.0.13"
authors = [
    "IOP Ventures LLC <dev@iop-ventures.com>",
    "Rache Bartmoss <bartmoss@tutanota.com>",
    "wigy <wigy_opensource_developer@yahoo.com>"
]
edition = "2018"
license = "LGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.32"
# There are still some transitive dependencies on this old version
getrandom01 = { version="0.1", package="getrandom", features=["wasm-bindgen"] }
getrandom = { version="0.2.3", features=["wasm-bindgen"] }
iop-hydra-proto = "0.0.13"
iop-hydra-sdk = "0.0.13"
iop-keyvault = "0.0.13"
iop-keyvault-wasm = "0.0.13"
iop-morpheus-proto = "0.0.13"
iop-morpheus-sdk = "0.0.13"
iop-proto-wasm = "0.0.13"
iop-vault = "0.0.13"
json-digest-wasm = "0.0.13"
# There are still some transitive dependencies on this old version
rand07 = { version="0.7", package="rand", features=["getrandom"] }
rand = { version="0.8.3", features=["getrandom"] }
serde = { version="1.0.121", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["preserve_order"] }
wasm-bindgen = { version = "0.2.73", features = ["serde-serialize"] }
