[package]
name = "iop-sdk"
version = "0.0.12-hotfix1"
authors = ["IOP Ventures LLC <dev@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>", "wigy <wigy_opensource_developer@yahoo.com>"]
license = "LGPL-3.0-or-later"
edition = "2018"


[lib]
name = "iop_sdk"
crate-type = ["rlib","cdylib"]


[dependencies]
anyhow = "1.0.32"
iop-coeus-core = "0.0.12-hotfix1"
iop-hydra-proto = "0.0.12-hotfix1"
iop-hydra-sdk = "0.0.12-hotfix1"
iop-keyvault = "=0.0.12-hotfix1"
iop-morpheus-core = "0.0.12-hotfix1"
iop-morpheus-sdk = "0.0.12-hotfix1"
iop-vault = "0.0.12-hotfix1"
json-digest = "0.0.12-hotfix1"
rand = { version = "0.8.3", features = ["getrandom"] }
serde = { version="1.0.121", features = ["derive"] }
serde_bytes = "0.11.5"
serde_json = { version = "1.0.64", features = ["preserve_order"] }
typetag = "0.1.5"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.17", default-features = false }
android_logger = "0.9"
