[package]
name = "iop-sdk"
description = "Client SDK for the IOP Stack™"
version = "0.0.15"
authors = [
  "IOP Ventures LLC <dev@iop-ventures.com>",
  "Rache Bartmoss <bartmoss@tutanota.com>",
  "wigy <wigy_opensource_developer@yahoo.com>",
]
license = "LGPL-3.0-or-later"
edition = "2018"
repository = "https://github.com/Internet-of-People/iop-rs"
homepage = "https://developer.iop.technology/"


[lib]
name = "iop_sdk"
crate-type = ["rlib", "cdylib"]


[dependencies]
anyhow = "1.0.57"
iop-coeus-proto = "0.0.15"
iop-hydra-proto = "0.0.15"
iop-hydra-sdk = "0.0.15"
iop-journal-proto = "0.0.15"
iop-keyvault = "0.0.15"
iop-morpheus-proto = "0.0.15"
iop-morpheus-sdk = "0.0.15"
iop-vault = "0.0.15"
json-digest = "0.0.15"
rand = { version = "0.8.5", features = ["getrandom"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_bytes = "0.11.6"
serde_json = { version = "1.0.81", features = ["preserve_order"] }
typetag = "0.1.8"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.19.0", default-features = false }
android_logger = "0.11.0"
