[package]
name = "iop-vault"
description = "A hierarchical deterministic wallet that allows plugin extensions for the IOP Stack™"
version = "0.0.15"
authors = ["IOP Ventures LLC <dev@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>", "wigy <wigy_opensource_developer@yahoo.com>"]
edition = "2018"
license = "LGPL-3.0-or-later"


[dependencies]
anyhow = "1.0.32"
iop-keyvault = "0.0.15"
multibase = "0.9.1"
parking_lot = { version = "0.11.1", features = ["serde", "wasm-bindgen"] }
serde = { version="1.0.121", features = ["derive", "rc"] }
typetag = "0.1.5"

# --- Hydra dependencies
byteorder = "1.3.4"
hex = "0.4.2"
sha2 = "0.9.1"


[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.17", default-features = false }
android_logger = "0.9"
