[package]
name = "iop-vault"
description = "A hierarchical deterministic wallet that allows plugin extensions for the IOP Stack™"
version = "0.0.16"
authors = ["IOP Ventures LLC <dev@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>", "wigy <wigy_opensource_developer@yahoo.com>"]
edition = "2021"
license = "LGPL-3.0-or-later"


[dependencies]
anyhow = "1.0.57"
iop-keyvault = "0.0.16"
multibase = "0.9.1"
parking_lot = { version = "0.12.1", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive", "rc"] }
typetag = "0.1.8"

# --- Hydra dependencies
byteorder = "1.4.3"
hex = "0.4.3"
sha2 = "0.10.2"


[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.19.0", default-features = false }
android_logger = "0.11.0"
